@@ -1,11 +1,23 @@
 package com.twitter.finagle
 
 import org.junit.runner.RunWith
+import org.scalacheck.{Arbitrary, Gen}
 import org.scalatest.FunSuite
-import org.scalatest.junit.JUnitRunner
+import org.scalatest.junit.{JUnitRunner, AssertionsForJUnit}
+import org.scalatest.prop.GeneratorDrivenPropertyChecks
 
 @RunWith(classOf[JUnitRunner])
-class FailureTest extends FunSuite {
+class FailureTest extends FunSuite with AssertionsForJUnit with GeneratorDrivenPropertyChecks {
+  val exc = Gen.oneOf(
+    new Exception("first"),
+    new Exception("second"))
+
+  val failure = Gen.oneOf[Throwable => Failure](
+    Failure.Cause(_: Throwable), 
+    Failure.InterruptedBy(_: Throwable), 
+    Failure.Retryable(_: Throwable), 
+    Failure.Rejected(_: Throwable))
+
   test("simple failures with a cause") {
     val why = "boom!"
     val exc = new Exception(why)
@@ -38,6 +50,22 @@ class FailureTest extends FunSuite {
       case _ => fail()
     }
   }
+  
+  test("rejected failures") {
+    val exc = new Exception
+    val f = Failure.Rejected(exc)
+    
+    f match {
+      case Failure.Rejected(e) => assert(e == exc)
+      case _ => fail()
+    }
+    
+    // Rejected is a subtype of retryable.
+    f match {
+      case Failure.Retryable(e) => assert(e == exc)
+      case _ => fail()
+    }
+  }
 
   test("equality") {
     val ex_a = new Exception("fonzbonz")
@@ -46,13 +74,24 @@ class FailureTest extends FunSuite {
     val fa2: Failure = Failure.Retryable(ex_a)
     val fb: Failure = Failure.Retryable(ex_b)
     val faa: Failure = Failure.InterruptedBy(ex_a)
-
+    
     assert(fa1 === fa2)
     assert(fa1.hashCode === fa2.hashCode)
     assert(fa1 != fb)
     assert(fa2 != faa)
-    assert(fa2.hashCode != fb.hashCode)
-    assert(fa1.hashCode != faa.hashCode)
+  }
+  
+  test("equality (gen)") {
+    forAll(failure) { f =>
+      val e1, e2 = new Exception
+      f(e1) == f(e1) && f(e1) != f(e2) && f(e1).hashCode == f(e1).hashCode
+    }
+    
+    val failure2 = for (f1 <- failure; f2 <- failure if f1 != f2) yield (f1, f2)
+    forAll(failure2) { case (f1, f2) =>
+      val e = new Exception
+      f1(e) != f2(e)
+    }
   }
 
   test("interrupted failures") {
